tests/e2e/string_templates_nested.error
Error: syntax error in story at line 1, column 5

1|    a = ".{my_service call: \"${foo}\"}"
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

E0059: String templates can't be nested
