tests/e2e/string_templates_nested.story
a = ".{my_service call: \"${foo}\"}"
